# mcp-explorer

./: .gitignore  .mcp-config  MANIFEST.in  README.md  config.py  env-test.yml  explorer-config.yaml  main.py  markdown-styles.css  mcp-explorer-requirements.txt  mcp-explorer.Dockerfile  mcp-explorer.spec  mcp-explorer.yaml  models.py  pycodesign.ini  pyproject.toml  query_processor.py  query_processor_api_doc.md  stdio-server.py
frontend/: README.md  package-lock.json  package.json  vite.config.js
frontend/src/: ApiKeysDialog.jsx  App.jsx  AppWrapper.jsx  ConfigExportDialog.jsx  EnvVarsDialog.jsx  InputMessage.css  InputMessage.jsx  JSONView.jsx  MessageView.jsx  ServerTree.jsx  SystemPrompt.jsx  TextView.jsx  ToolDetail.jsx  ToolTester.jsx  Tools.jsx  ToolsJsonDialog.jsx  apiConfig.js  index.css  main.jsx  theme.js
frontend/src/contexts/: ApiKeysContext.jsx  EnvVarsContext.jsx  ServersContext.jsx  SystemPromptContext.jsx  (+1 more)
mathoms/: env-test.yml  env-var-decrypt.py  env-var-encrypt.py  feature-enrypted-env-var.md  feature-secure-api-key-feature-daemon.md
mcp_explorer/: config.py  models.py
mcp_explorer/api/: app.py  main.py
mcp_explorer/client/: mcp_client.py
mcp_explorer/core/: query_processor.py
mcp_explorer/server/: base.py  sse.py  stdio.py
mcp_explorer/static/: index.html
mcp_explorer/utils/: secrets.py
server/: __init__.py  stdio.py
static/: index.html
static/assets/: index-BrJjYsJS.css  index-BxEHWU4H.js  index-CAVSZfJV.js  index-CO_f242W.js  index-DbHSKlud.css  index-X_2bYBse.js  index-e6aAlu4v.js
static/static/: index.html
(+12 files in other folders)
