[project]
name = "mcp-explorer"
version = "0.2.1"
description = "LLM Client"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic",
    "httpx",
    "mcp[cli]",
    "fastapi",
    "uvicorn",
    "pyinstaller",
    "pyyaml",
    "rich",
    "art",
    "prompt_toolkit",
    "cryptography",
    "build"
]

[project.scripts]
"mcp-explorer" = "main:run"


[tool.setuptools.packages.find]
where    = ["."]
include  = ["mcp_explorer*"]
exclude  = ["frontend*", "static*"]

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.package-data]
"mcp_explorer" = ["static/**"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
